[package]
name = "tiktok_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.13", features=["json"]}
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.91"
actix-web = "4.2.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"
base64 = "0.21.0"
log="0.4.17"
dotenv = "0.15.0"
anyhow = "1.0.68"
url="2.3.1"
rand="0.8.5"
base-encode="0.3.1"
chrono="0.4.23"


